Changed the UI for the Login Page.

--- a/Football-Hub/Base.lproj/Main.storyboard
+++ b/Football-Hub/Base.lproj/Main.storyboard
@@ -283,82 +283,106 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BSS-lH-pw6">
-                                <rect key="frame" x="101" y="148" width="173" height="90"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="lfQ-X1-MfQ">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="E" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hTV-fl-NuK">
+                                <rect key="frame" x="23" y="274" width="21" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="1sO-Bd-aPy"/>
+                                    <constraint firstAttribute="height" constant="35" id="Foj-fI-3co"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="66"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="42"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7aM-79-BxH">
-                                <rect key="frame" x="126" y="270" width="233" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U4g-7A-fBf">
+                                <rect key="frame" x="54" y="274" width="272" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="8DU-B8-goS"/>
+                                    <constraint firstAttribute="height" constant="35" id="DA4-aZ-xNE"/>
                                 </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6P-Wc-aPY">
-                                <rect key="frame" x="24" y="267" width="54" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="P" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wtu-9D-ENf">
+                                <rect key="frame" x="23" y="331" width="28" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="n5u-Ka-l4p"/>
+                                    <constraint firstAttribute="height" constant="35" id="9Bq-xE-5hK"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="42"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9NR-Jd-Ygp">
-                                <rect key="frame" x="22" y="336" width="99" height="40"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xjf-pH-OOY">
+                                <rect key="frame" x="54" y="331" width="272" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Dkt-OW-Cz8"/>
+                                    <constraint firstAttribute="height" constant="35" id="Pbe-SV-Vso"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hgg-1f-JCJ">
-                                <rect key="frame" x="126" y="336" width="233" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="eZG-Ny-Tdo"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kee-ha-DRX">
-                                <rect key="frame" x="102" y="400" width="164" height="53"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFt-Mt-Raj">
+                                <rect key="frame" x="112" y="116" width="151" height="46"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="53" id="NWZ-yv-DWa"/>
+                                    <constraint firstAttribute="height" constant="46" id="g5j-lj-fRS"/>
                                 </constraints>
-                                <state key="normal" image="login-button"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="42"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sef-SU-Ba6">
+                                <rect key="frame" x="81" y="426" width="214" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="63" id="CFD-fQ-gAB"/>
+                                </constraints>
+                                <state key="normal" image="sign"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dN2-cG-P4E">
+                                <rect key="frame" x="23" y="378" width="162" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="wvj-OT-kYq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Forgot Password?">
+                                    <color key="titleColor" red="0.62352941176470589" green="0.35686274509803922" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.2550618052482605" green="0.28087639808654785" blue="0.50982797145843506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="7aM-79-BxH" firstAttribute="leading" secondItem="v6P-Wc-aPY" secondAttribute="trailing" constant="48" id="2nZ-5o-8Sz"/>
-                            <constraint firstItem="Hgg-1f-JCJ" firstAttribute="leading" secondItem="9NR-Jd-Ygp" secondAttribute="trailing" constant="5" id="6nA-zz-hns"/>
-                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="kee-ha-DRX" secondAttribute="trailing" constant="109" id="7tD-Iq-j86"/>
-                            <constraint firstItem="BSS-lH-pw6" firstAttribute="top" secondItem="arW-OQ-g2s" secondAttribute="top" constant="104" id="Jm5-xn-8xp"/>
-                            <constraint firstAttribute="trailing" secondItem="v6P-Wc-aPY" secondAttribute="trailing" constant="297" id="QiR-Zg-YOK"/>
-                            <constraint firstItem="kee-ha-DRX" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="102" id="a4S-Lg-uHB"/>
-                            <constraint firstItem="BSS-lH-pw6" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="101" id="cdT-bX-n7I"/>
-                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="Hgg-1f-JCJ" secondAttribute="trailing" constant="16" id="ee5-S8-SFf"/>
-                            <constraint firstItem="7aM-79-BxH" firstAttribute="top" secondItem="BSS-lH-pw6" secondAttribute="bottom" constant="32" id="f1F-Mc-toF"/>
-                            <constraint firstItem="v6P-Wc-aPY" firstAttribute="top" secondItem="arW-OQ-g2s" secondAttribute="top" constant="223" id="fUR-M1-hre"/>
-                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="7aM-79-BxH" secondAttribute="trailing" constant="16" id="jQd-Ug-Ool"/>
-                            <constraint firstItem="v6P-Wc-aPY" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="24" id="kZV-da-xJO"/>
-                            <constraint firstItem="9NR-Jd-Ygp" firstAttribute="top" secondItem="v6P-Wc-aPY" secondAttribute="bottom" constant="29" id="olN-RN-5lm"/>
-                            <constraint firstItem="kee-ha-DRX" firstAttribute="top" secondItem="9NR-Jd-Ygp" secondAttribute="bottom" constant="24" id="pc4-eE-coS"/>
-                            <constraint firstItem="9NR-Jd-Ygp" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="22" id="qwK-oN-27R"/>
-                            <constraint firstAttribute="trailing" secondItem="9NR-Jd-Ygp" secondAttribute="trailing" constant="254" id="x9A-zy-ywz"/>
-                            <constraint firstItem="Hgg-1f-JCJ" firstAttribute="top" secondItem="7aM-79-BxH" secondAttribute="bottom" constant="32" id="yQZ-Ui-Hba"/>
-                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="BSS-lH-pw6" secondAttribute="trailing" constant="101" id="zDu-6r-dlH"/>
+                            <constraint firstItem="VFt-Mt-Raj" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="112" id="4pq-y2-wiC"/>
+                            <constraint firstItem="Sef-SU-Ba6" firstAttribute="top" secondItem="dN2-cG-P4E" secondAttribute="bottom" constant="10" id="7Wb-Go-HUz"/>
+                            <constraint firstItem="U4g-7A-fBf" firstAttribute="top" secondItem="VFt-Mt-Raj" secondAttribute="bottom" constant="112" id="94T-nu-AOh"/>
+                            <constraint firstItem="hTV-fl-NuK" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="23" id="BUB-ob-ymK"/>
+                            <constraint firstItem="lfQ-X1-MfQ" firstAttribute="trailing" secondItem="arW-OQ-g2s" secondAttribute="trailing" id="BXq-X9-gkA"/>
+                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="Xjf-pH-OOY" secondAttribute="trailing" constant="49" id="CgG-ht-IVu"/>
+                            <constraint firstItem="wtu-9D-ENf" firstAttribute="top" secondItem="hTV-fl-NuK" secondAttribute="bottom" constant="22" id="CvJ-di-3TZ"/>
+                            <constraint firstItem="VFt-Mt-Raj" firstAttribute="top" secondItem="arW-OQ-g2s" secondAttribute="top" constant="72" id="GOW-NZ-zx6"/>
+                            <constraint firstAttribute="trailing" secondItem="wtu-9D-ENf" secondAttribute="trailing" constant="324" id="HN6-uo-4sD"/>
+                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="Sef-SU-Ba6" secondAttribute="trailing" constant="80" id="Mdf-o8-INF"/>
+                            <constraint firstItem="dN2-cG-P4E" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="23" id="Opu-Hs-yST"/>
+                            <constraint firstItem="wtu-9D-ENf" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="23" id="WuP-dk-Hwp"/>
+                            <constraint firstItem="U4g-7A-fBf" firstAttribute="leading" secondItem="hTV-fl-NuK" secondAttribute="trailing" constant="10" id="aEb-uB-mzL"/>
+                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="U4g-7A-fBf" secondAttribute="trailing" constant="49" id="bPf-pq-f94"/>
+                            <constraint firstAttribute="trailing" secondItem="hTV-fl-NuK" secondAttribute="trailing" constant="331" id="ffx-bv-hRK"/>
+                            <constraint firstItem="hTV-fl-NuK" firstAttribute="top" secondItem="arW-OQ-g2s" secondAttribute="top" constant="230" id="hHT-vv-FpF"/>
+                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="dN2-cG-P4E" secondAttribute="trailing" constant="190" id="hN7-eR-AHf"/>
+                            <constraint firstItem="lfQ-X1-MfQ" firstAttribute="top" secondItem="arW-OQ-g2s" secondAttribute="top" id="kMF-aA-70E"/>
+                            <constraint firstItem="Xjf-pH-OOY" firstAttribute="top" secondItem="U4g-7A-fBf" secondAttribute="bottom" constant="22" id="koa-p7-x6b"/>
+                            <constraint firstItem="arW-OQ-g2s" firstAttribute="trailing" secondItem="VFt-Mt-Raj" secondAttribute="trailing" constant="112" id="lYJ-0M-VWU"/>
+                            <constraint firstItem="lfQ-X1-MfQ" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" id="rEM-S8-uoZ"/>
+                            <constraint firstItem="Sef-SU-Ba6" firstAttribute="leading" secondItem="arW-OQ-g2s" secondAttribute="leading" constant="81" id="tiW-b9-low"/>
+                            <constraint firstItem="Xjf-pH-OOY" firstAttribute="leading" secondItem="wtu-9D-ENf" secondAttribute="trailing" constant="3" id="w23-df-K1i"/>
+                            <constraint firstItem="dN2-cG-P4E" firstAttribute="top" secondItem="wtu-9D-ENf" secondAttribute="bottom" constant="12" id="yRz-wT-RlY"/>
+                            <constraint firstItem="lfQ-X1-MfQ" firstAttribute="bottom" secondItem="arW-OQ-g2s" secondAttribute="bottom" id="yf7-BP-hNr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="arW-OQ-g2s"/>
                     </view>
+                    <connections>
+                        <outlet property="password" destination="Xjf-pH-OOY" id="Uis-Xh-MV6"/>
+                        <outlet property="userEmail" destination="U4g-7A-fBf" id="ZLe-SS-uqc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lIP-K6-YNP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -366,9 +390,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Background" width="375" height="812"/>
         <image name="Ball" width="120.33425903320312" height="119.73258972167969"/>
         <image name="Get-Started" width="315" height="70"/>
         <image name="Next" width="164" height="53"/>
-        <image name="login-button" width="164" height="53"/>
+        <image name="sign" width="214" height="63"/>
     </resources>
 </document>
