--- a/Football-Hub/Base.lproj/Main.storyboard
+++ b/Football-Hub/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
                                 </constraints>
                                 <state key="normal" image="Next"/>
                                 <connections>
-                                    <segue destination="Vva-O9-wnD" kind="show" id="jtd-Q1-Iwt"/>
+                                    <segue destination="J1L-2a-pJc" kind="show" id="WF8-Md-qC5"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -661,6 +661,137 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oBH-bz-g3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="61.600000000000001" y="699.7536945812808"/>
+        </scene>
+        <!--Select Team View Controller-->
+        <scene sceneID="Ojs-l7-Lug">
+            <objects>
+                <viewController id="J1L-2a-pJc" customClass="SelectTeamViewController" customModule="Football_Hub" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TUd-Pt-fuA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Your Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OO2-4U-lgZ">
+                                <rect key="frame" x="16" y="116" width="287" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="QZh-6f-GoW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="33"/>
+                                <color key="textColor" red="0.83529411760000005" green="0.57647058819999997" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="130" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ca1-id-9NJ">
+                                <rect key="frame" x="0.0" y="173" width="375" height="605"/>
+                                <color key="backgroundColor" red="0.084613986313343048" green="0.057342976331710815" blue="0.47061830759048462" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="teamCell" rowHeight="130" id="3Nr-E9-f5s" customClass="TeamCell" customModule="Football_Hub" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="130"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Nr-E9-f5s" id="4Ph-wa-0he">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rg0-qo-bY9">
+                                                    <rect key="frame" x="15" y="11" width="345" height="108"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rCY-SR-6cL">
+                                                            <rect key="frame" x="8" y="21" width="65" height="66"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCR-su-sdh">
+                                                            <rect key="frame" x="89" y="21" width="237" height="66"/>
+                                                            <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="22"/>
+                                                            <color key="textColor" red="0.83529411760000005" green="0.57647058819999997" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="rCY-SR-6cL" firstAttribute="top" secondItem="rg0-qo-bY9" secondAttribute="top" constant="21" id="5Q7-wT-I9P"/>
+                                                        <constraint firstItem="mCR-su-sdh" firstAttribute="top" secondItem="rg0-qo-bY9" secondAttribute="top" constant="21" id="AXK-1u-16l"/>
+                                                        <constraint firstAttribute="height" constant="108" id="GK3-3x-nRU"/>
+                                                        <constraint firstItem="rCY-SR-6cL" firstAttribute="leading" secondItem="rg0-qo-bY9" secondAttribute="leading" constant="8" id="Pc7-yx-pDT"/>
+                                                        <constraint firstItem="mCR-su-sdh" firstAttribute="leading" secondItem="rCY-SR-6cL" secondAttribute="trailing" constant="16" id="QGg-VN-Cch"/>
+                                                        <constraint firstAttribute="trailing" secondItem="mCR-su-sdh" secondAttribute="trailing" constant="19" id="fNd-do-9wn"/>
+                                                        <constraint firstAttribute="bottom" secondItem="mCR-su-sdh" secondAttribute="bottom" constant="21" id="g5F-kF-yCc"/>
+                                                        <constraint firstAttribute="bottom" secondItem="rCY-SR-6cL" secondAttribute="bottom" constant="21" id="kXK-3V-Aef"/>
+                                                        <constraint firstAttribute="trailing" secondItem="rCY-SR-6cL" secondAttribute="trailing" constant="272" id="wW9-53-9aj"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="rg0-qo-bY9" secondAttribute="trailing" constant="15" id="P2M-bV-wKq"/>
+                                                <constraint firstItem="rg0-qo-bY9" firstAttribute="top" secondItem="4Ph-wa-0he" secondAttribute="top" constant="11" id="gOr-l8-Fv3"/>
+                                                <constraint firstItem="rg0-qo-bY9" firstAttribute="leading" secondItem="4Ph-wa-0he" secondAttribute="leading" constant="15" id="ucG-AT-lq4"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.08461398631" green="0.057342976330000003" blue="0.47061830760000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <outlet property="teamLogo" destination="rCY-SR-6cL" id="1Ed-9P-hES"/>
+                                            <outlet property="teamName" destination="mCR-su-sdh" id="9JO-M6-uf6"/>
+                                            <outlet property="teamView" destination="rg0-qo-bY9" id="FlA-hA-EIT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="leagueCell" rowHeight="130" id="45x-RZ-c7v" customClass="LeagueCell" customModule="Football_Hub" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="158" width="375" height="130"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="45x-RZ-c7v" id="2P8-yW-WqE">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sws-th-6xG">
+                                                    <rect key="frame" x="15" y="11" width="345" height="108"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Rh-Cj-XjX">
+                                                            <rect key="frame" x="8" y="8" width="329" height="92"/>
+                                                            <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="25"/>
+                                                            <color key="textColor" red="0.83529411760000005" green="0.57647058819999997" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="0Rh-Cj-XjX" firstAttribute="top" secondItem="Sws-th-6xG" secondAttribute="top" constant="8" id="1tO-DL-pRH"/>
+                                                        <constraint firstAttribute="bottom" secondItem="0Rh-Cj-XjX" secondAttribute="bottom" constant="8" id="8bv-NF-bsl"/>
+                                                        <constraint firstItem="0Rh-Cj-XjX" firstAttribute="leading" secondItem="Sws-th-6xG" secondAttribute="leading" constant="8" id="YWd-Ze-0tS"/>
+                                                        <constraint firstAttribute="trailing" secondItem="0Rh-Cj-XjX" secondAttribute="trailing" constant="8" id="lOS-tH-1pu"/>
+                                                        <constraint firstAttribute="height" constant="108" id="swt-ah-BLA"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Sws-th-6xG" secondAttribute="trailing" constant="15" id="CC8-Za-CTH"/>
+                                                <constraint firstItem="Sws-th-6xG" firstAttribute="leading" secondItem="2P8-yW-WqE" secondAttribute="leading" constant="15" id="mlp-h6-Ekf"/>
+                                                <constraint firstItem="Sws-th-6xG" firstAttribute="top" secondItem="2P8-yW-WqE" secondAttribute="top" constant="11" id="zUX-eb-3U7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.08461398631" green="0.057342976330000003" blue="0.47061830760000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <outlet property="leagueName" destination="0Rh-Cj-XjX" id="WcL-hA-Lxv"/>
+                                            <outlet property="leagueView" destination="Sws-th-6xG" id="KvP-Dv-VdP"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="J1L-2a-pJc" id="WRh-DL-gOR"/>
+                                    <outlet property="delegate" destination="J1L-2a-pJc" id="yPW-ZR-9T3"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.084613986313343048" green="0.057342976331710815" blue="0.47061830759048462" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="OO2-4U-lgZ" firstAttribute="top" secondItem="F45-vV-wlr" secondAttribute="top" constant="72" id="1u3-v5-RRX"/>
+                            <constraint firstItem="ca1-id-9NJ" firstAttribute="leading" secondItem="F45-vV-wlr" secondAttribute="leading" id="5k9-hL-ODE"/>
+                            <constraint firstItem="ca1-id-9NJ" firstAttribute="top" secondItem="OO2-4U-lgZ" secondAttribute="bottom" constant="8" id="Qqu-BQ-l8K"/>
+                            <constraint firstItem="ca1-id-9NJ" firstAttribute="bottom" secondItem="F45-vV-wlr" secondAttribute="bottom" id="TaW-1g-qbi"/>
+                            <constraint firstItem="OO2-4U-lgZ" firstAttribute="leading" secondItem="F45-vV-wlr" secondAttribute="leading" constant="16" id="g6A-HF-AS9"/>
+                            <constraint firstItem="ca1-id-9NJ" firstAttribute="trailing" secondItem="F45-vV-wlr" secondAttribute="trailing" id="rR4-j2-KJq"/>
+                            <constraint firstItem="F45-vV-wlr" firstAttribute="trailing" secondItem="OO2-4U-lgZ" secondAttribute="trailing" constant="72" id="t4l-NZ-k7c"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="F45-vV-wlr"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aZF-p9-UaK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="809" y="766"/>
         </scene>
     </scenes>
     <resources>
